# intelRealSense

IR_sample/: CMakeLists.txt  main.cpp
RBG_sample/: CMakeLists.txt  main.cpp
example_measure/: CMakeLists.txt
grabcuts/: CMakeLists.txt  main.cpp
ler_rosbag/: CMakeLists.txt  CMakeLists.txt.user.299b218.4.9-pre1  main.cpp
rs-measure/: CMakeLists.txt  CMakeLists.txt.user.299b218.4.9-pre1  main.cpp
salve_rosbag/: CMakeLists.txt  main.cpp  usadoTesteCurral.txt
save-to-disk/: CMakeLists.txt  compile_commands.json  rs-save-to-disk.cpp
testeRealsense/: IR_sample.cpp  rgb_sample.cpp
teste_Opengl/: CMakeLists.txt  main.cpp
